// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get layout 1`] = `
<div
  className="flex min-h-screen max-h-screen flex-column"
>
  <div
    className="bg-primary p-4 z-1 shadow-4"
  >
    <div
      className="flex justify-content-between"
    >
      <div
        className="flex direction-row align-items-center"
      >
        <div
          className="mr-2"
        >
          <a
            href="/workspaces"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Prisme.ai
          </a>
        </div>
        <div
          className="p-inplace p-component p-inplace-closable flex"
        >
          <div
            aria-label={null}
            className="p-inplace-display"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            <div
              className="flex"
            >
              foo
            </div>
          </div>
        </div>
      </div>
      <div>
        <a
          href="/workspaces/42/source"
          onClick={[Function]}
          onMouseEnter={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="flex flex-1 surface-ground relative"
    style={
      Object {
        "overflow": "auto",
        "overflowX": "hidden",
      }
    }
  >
    <div
      className="flex flex-1"
    >
      <div
        className="flex flex-1 flex-column overflow-auto"
      >
        <div />
      </div>
      <div
        className="
          absolute
          surface-section
          top-0
          left-100
          bottom-0
          p-4
          transition-transform
          transition-duration-100
          transition-ease-in
          
          shadow-4
          z-4"
        onClick={[Function]}
        onTouchEnd={[Function]}
      >
        <div>
          <div>
            automations.link
          </div>
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render 404 1`] = `
<div
  className="flex min-h-screen max-h-screen flex-column"
>
  <div
    className="bg-primary p-4 z-1 shadow-4"
  >
    <div
      className="flex justify-content-between"
    >
      <div
        className="flex direction-row align-items-center"
      >
        <div
          className="mr-2"
        >
          <a
            href="/workspaces"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Prisme.ai
          </a>
        </div>
      </div>
      <div />
    </div>
  </div>
  <div
    className="flex flex-1 surface-ground relative"
    style={
      Object {
        "overflow": "auto",
        "overflowX": "hidden",
      }
    }
  >
    <a
      href="/workspaces"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      404
    </a>
  </div>
</div>
`;

exports[`should render empty 1`] = `
<div
  className="flex min-h-screen max-h-screen flex-column"
>
  <div
    className="bg-primary p-4 z-1 shadow-4"
  >
    <div
      className="flex justify-content-between"
    >
      <div
        className="flex direction-row align-items-center"
      >
        <div
          className="mr-2"
        >
          <a
            href="/workspaces"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Prisme.ai
          </a>
        </div>
        <div
          className="p-inplace p-component p-inplace-closable flex"
        >
          <div
            aria-label={null}
            className="p-inplace-display"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            <div
              className="flex"
            >
              foo
            </div>
          </div>
        </div>
      </div>
      <div>
        <a
          href="/workspaces/42/source"
          onClick={[Function]}
          onMouseEnter={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="flex flex-1 surface-ground relative"
    style={
      Object {
        "overflow": "auto",
        "overflowX": "hidden",
      }
    }
  >
    <div
      className="flex flex-1"
    >
      <div
        className="flex flex-1 flex-column overflow-auto"
      >
        Foo
      </div>
      <div
        className="
          absolute
          surface-section
          top-0
          left-100
          bottom-0
          p-4
          transition-transform
          transition-duration-100
          transition-ease-in
          
          shadow-4
          z-4"
        onClick={[Function]}
        onTouchEnd={[Function]}
      >
        <div>
          <div>
            automations.link
          </div>
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render fetching 1`] = `
<div
  className="flex min-h-screen max-h-screen flex-column"
>
  <div
    className="bg-primary p-4 z-1 shadow-4"
  >
    <div
      className="flex justify-content-between"
    >
      <div
        className="flex direction-row align-items-center"
      >
        <div
          className="mr-2"
        >
          <a
            href="/workspaces"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Prisme.ai
          </a>
        </div>
        <div
          className="p-inplace p-component p-inplace-closable flex"
        >
          <div
            aria-label={null}
            className="p-inplace-display"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            <div
              className="flex"
            >
              foo
            </div>
          </div>
        </div>
      </div>
      <div>
        <a
          href="/workspaces/42/source"
          onClick={[Function]}
          onMouseEnter={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="flex flex-1 surface-ground relative"
    style={
      Object {
        "overflow": "auto",
        "overflowX": "hidden",
      }
    }
  >
    <div
      className="flex flex-1"
    >
      <div
        className="flex flex-1 flex-column overflow-auto"
      >
        Foo
      </div>
      <div
        className="
          absolute
          surface-section
          top-0
          left-100
          bottom-0
          p-4
          transition-transform
          transition-duration-100
          transition-ease-in
          
          shadow-4
          z-4"
        onClick={[Function]}
        onTouchEnd={[Function]}
      >
        <div>
          <div>
            automations.link
          </div>
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render loading 1`] = `
<div
  className="flex min-h-screen max-h-screen flex-column"
>
  <div
    className="bg-primary p-4 z-1 shadow-4"
  >
    <div
      className="flex justify-content-between"
    >
      <div
        className="flex direction-row align-items-center"
      >
        <div
          className="mr-2"
        >
          <a
            href="/workspaces"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Prisme.ai
          </a>
        </div>
        <div
          className="p-inplace p-component p-inplace-closable flex"
        >
          <div
            aria-label={null}
            className="p-inplace-display"
            onClick={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            <div
              className="flex"
            >
              foo
            </div>
          </div>
        </div>
      </div>
      <div>
        <a
          href="/workspaces/42/source"
          onClick={[Function]}
          onMouseEnter={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="flex flex-1 surface-ground relative"
    style={
      Object {
        "overflow": "auto",
        "overflowX": "hidden",
      }
    }
  >
    <div
      className="flex flex-1"
    >
      <div
        className="flex flex-1 flex-column overflow-auto"
      >
        Foo
      </div>
      <div
        className="
          absolute
          surface-section
          top-0
          left-100
          bottom-0
          p-4
          transition-transform
          transition-duration-100
          transition-ease-in
          
          shadow-4
          z-4"
        onClick={[Function]}
        onTouchEnd={[Function]}
      >
        <div>
          <div>
            automations.link
          </div>
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;
